; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/srp/extr_ib_srp.c_srp_change_conn_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/srp/extr_ib_srp.c_srp_change_conn_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.srp_target_port = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.srp_target_port*, i32)* @srp_change_conn_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @srp_change_conn_state(%struct.srp_target_port* %0, i32 %1) #0 {
  %3 = alloca %struct.srp_target_port*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.srp_target_port* %0, %struct.srp_target_port** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load %struct.srp_target_port*, %struct.srp_target_port** %3, align 8
  %7 = getelementptr inbounds %struct.srp_target_port, %struct.srp_target_port* %6, i32 0, i32 1
  %8 = call i32 @spin_lock_irq(i32* %7)
  %9 = load %struct.srp_target_port*, %struct.srp_target_port** %3, align 8
  %10 = getelementptr inbounds %struct.srp_target_port, %struct.srp_target_port* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.srp_target_port*, %struct.srp_target_port** %3, align 8
  %17 = getelementptr inbounds %struct.srp_target_port, %struct.srp_target_port* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  store i32 1, i32* %5, align 4
  br label %18

18:                                               ; preds = %14, %2
  %19 = load %struct.srp_target_port*, %struct.srp_target_port** %3, align 8
  %20 = getelementptr inbounds %struct.srp_target_port, %struct.srp_target_port* %19, i32 0, i32 1
  %21 = call i32 @spin_unlock_irq(i32* %20)
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
